tests/errors/compiler/clncln_not_from_enum_class/clncln_not_from_enum_class_2.c
enum En1
{
	a,
	b,
	c
} tmp;

int main()
{
	tmp = tmp::b;
	return 0;
}